feat(auth): complete M3 Auth and Sessions with brute-force lockout, session cleanup, and live E2E verification